--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -218,12 +218,13 @@ html {
 .menu::-webkit-scrollbar {
     display: none;
 }
-
+/* #a43f49 side default bg color */
 .menu {
     left: 10%;
   -webkit-transition: -webkit-transform 233ms cubic-bezier(0, 0, 0.21, 1);
   -webkit-overflow-scrolling: touch;
-  background-color: #a43f49;
+  background-color: #1c2232;
+  
   box-sizing: border-box;
   height: 100vh;  
   max-height: 100vh !important;
